编辑文档，更新版本号